# PythonScripts

./: Ancient.Ciphers.py  README.md
Corona-Stats/: CoronaStats  README.md
budgie-sensibo-monitor/: README.md  budgie-sensibo-monitor.py.in  install.sh  meson.build  purgeinstall.sh  uninstall.sh
budgie-sensibo-monitor/src/: budgie-sensibo-monitor.plugin  budgie-sensibo-monitor.ui  com.solus-project.budgie-sensibo-monitor.gschema.xml  meson.build  meson_post_install
